Alteração no título e acrescento de um parágrafo

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
     </head>
     <body>
-        <h1>Projeto do Joao Fonseca</h1>
+        <h1>Projeto do Joao da Silva</h1>
+        <p>Projeto para teste em Git</p>
     </body>
 </html>
