Mudado de git para github no paragrafo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     </head>
     <body>
         <h1>Projeto do Joao da Silva</h1>
-        <p>Projeto para teste em Git</p>
+        <p>Projeto para teste em Github</p>
     </body>
 </html>
