--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" type"text/css" href="/design.css"/>
     </head>
     <body>
         <h1>Projeto do Joao da Silva</h1>
